--- a/src/pages/home/hero/Hero.css
+++ b/src/pages/home/hero/Hero.css
@@ -2,6 +2,8 @@
     padding: 0 0 25px 10%;
     background: #f6f6f6;
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .heroLeft {
