--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -51,3 +51,10 @@
     font-size: 0.92rem;
     cursor: pointer;
 }
+
+@media (width <= 768px) {
+
+    .headerMiddle {
+        display: none;
+    }
+}
