--- a/src/pages/home/hero/Hero.css
+++ b/src/pages/home/hero/Hero.css
@@ -1,7 +1,6 @@
 .hero {
     padding: 0 0 25px 0;
     display: flex;
-    justify-content: center;
     position: relative;
     width: 100%;
 }
@@ -21,6 +20,7 @@
     width: 30%;
     padding: 15px 50px 10px 0;
     margin-left: 10%;
+    display: flex;
 }
 
 .heroLeft h1 {
@@ -57,13 +57,14 @@
     background: rgba(229, 234, 226, 0.4);
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
-    height: 475px;
     display: flex;
     align-items: center;
+    justify-content: left;
 }
 
 .heroRightLeft {
     padding-top: 25px;
+    display: flex;
 }
 
 .heroRightLeft img {
@@ -119,4 +120,31 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+@media (width <= 992px) {
+
+    .hero {
+        flex-direction: column;
+        gap: 25px;
+    }
+
+    .heroLeft {
+        width: 100%;
+        padding-right: 0;
+    }
+
+    .heroLeft p {
+        padding-right: 175px;
+    }
+
+    .heroRight {
+        width: 100%;
+        align-items: left;
+        margin-left: 10%;
+    }
+
+    .heroRightLeft img {
+        margin-left: -90px;
+    }
 }
