--- a/src/pages/home/products/Products.css
+++ b/src/pages/home/products/Products.css
@@ -77,3 +77,21 @@
     margin-top: 35px;
     cursor: pointer;
 }
+
+@media (width <= 992px) {
+    .products {
+        padding-left: 10%;
+        padding-right: 10%;
+        background-size: 250px;
+    }
+}
+
+@media (width <= 576px) {
+    .products {
+        background-size: 200px;
+    }
+
+    .products h1 {
+        padding-right: 100px;
+    }
+}
