--- a/src/pages/home/subhero/SubHeroCard.css
+++ b/src/pages/home/subhero/SubHeroCard.css
@@ -1,15 +1,24 @@
 .subHeroCard {
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
 }
 
 .subHeroCardLeft {
+    height: 100%;
     padding: 25px;
     text-align: left;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: left;
+}
+
+.subHeroCardLeftContent {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .subHeroCardLeft p {
@@ -30,6 +39,7 @@
     font-size: 0.92rem;
     background-color: transparent;
     border: none;
+    border-bottom: 1px solid black;
     text-align: left;
     cursor: pointer;
 } 
@@ -37,6 +47,8 @@
 .subHeroCardRight {
     padding-top: 30px;
     padding-right: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 .subHeroCardRight img {
