--- a/src/pages/home/subhero/SubHero.css
+++ b/src/pages/home/subhero/SubHero.css
@@ -29,7 +29,9 @@
 
 .subHeroLeftContent {
     height: 270px;
+    width: 100%;
     display: flex;
+    justify-content: center;
 }
 
 .subHeroRight {
